--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,9 @@ bytes = "0.5.4"
 futures = "0.3.4"
 futures-util = "0.3.4"
 
+# display text
+glyph_brush = "0.6.3"
+
 [dependencies.glam]
 version = "0.8.4"
 features = ["serde"]
