--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ try-guard = "0.2.0"
 serde = "1.0.105"
 serde_derive = "1.0.105"
 serde_json = "1.0.48"
-
+bincode = "1.2.1"
 ron = "0.5.1"
 
 slotmap = "0.4.0"
