--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ luminance = "0.39.0"
 luminance-derive = "0.5"
 luminance-glfw = "0.12"
 luminance-windowing = "0.8"
-image = "0.23.2"
+image = "0.21.0"
+base64 = "0.11.0"
+
 wavefront_obj = "7"
 thiserror = "1.0.13"
 log = "0.4.8"
@@ -52,6 +54,12 @@ rand = "0.7.3"
 # For the RON editor.
 iced = "0.1"
 async-std = "1.0"
+
+bitflags = "1.2.1"
+
+[dependencies.gltf]
+version = "0.15"
+features = ["extras", "names"]
 
 [dependencies.glam]
 version = "0.8.4"
